--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -92,7 +92,7 @@ services:
     environment:
       - POSTGRES_DB=chatwoot
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=
+      - POSTGRES_PASSWORD=hcm306021
 
   redis:
     image: redis:alpine
